[gd_scene load_steps=5 format=3 uid="uid://cywru0xulouqc"]

[ext_resource type="Script" path="res://scripts/kitchen_panel/Machines/group_handle.gd" id="1_3m80d"]
[ext_resource type="Texture2D" uid="uid://bce8wdr8esqjy" path="res://assets/images/kitchen panel/machines/bnb_group_handle.png" id="2_cwk3t"]
[ext_resource type="Resource" uid="uid://f2078y8fhvl8" path="res://resources/ingredients/coffee.tres" id="2_krh3n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2fc41"]
size = Vector2(168, 80)

[node name="GroupHandle" type="Node2D" groups=["groupHandle"]]
script = ExtResource("1_3m80d")
ingredient = ExtResource("2_krh3n")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(6, 6)
texture = ExtResource("2_cwk3t")

[node name="Area2D" type="Area2D" parent="." groups=["groupHandle"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_2fc41")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
